# wit-bindgen-backport

./: Cargo.toml  README.md
crates/gen-rust/src/: lib.rs
crates/gen-wasmtime/: Cargo.toml
crates/gen-wasmtime/src/: lib.rs
crates/test-helpers/: Cargo.toml  build.rs
crates/test-helpers/src/: lib.rs
crates/wasmtime/: Cargo.toml
crates/wasmtime/src/: lib.rs  region.rs
crates/wit-bindgen-demo/: Cargo.toml  demo.wit  index.html  main.ts
crates/wit-bindgen-demo/src/: lib.rs
tests/: README.md
tests/runtime/handles/: host.py
tests/runtime/lists/: host.rs  wasm.rs
tests/runtime/records/: host.rs  wasm.rs
tests/runtime/variants/: host.rs  wasm.rs
