[package]
name = "test-helpers"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
backtrace = "0.3"
heck = "0.3"
ignore = "0.4"
proc-macro2 = "1.0.27"
quote = "1.0.9"
wit-bindgen-gen-core = { path = '../gen-core' }
wit-bindgen-gen-rust-wasm = { path = '../gen-rust-wasm', optional = true }
wit-bindgen-gen-wasmtime = { path = '../gen-wasmtime', optional = true }
wit-parser = { path = '../parser' }
filetime = "0.2"

[build-dependencies]
wit-bindgen-gen-core = { path = '../gen-core' }

[features]
default = ['wasm-rust']
wasm-rust = []
